changes img paths

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
             <!-- картинки -->
             <div class="slider-images__wrapper">
                 <div class="slide-image slide-image--active">
-                    <img src="/img/openkam.jpg" alt="">
+                    <img src="./img/openkam.jpg" alt="">
                 </div>
                 <div class="slide-image">
-                    <img src="/img/advent.jpg" alt="">
+                    <img src="./img/advent.jpg" alt="">
                 </div>
                 <div class="slide-image">
-                    <img src="/img/safetrav.jpg" alt="">
+                    <img src="./img/safetrav.jpg" alt="">
                 </div>
             </div>
             <!-- / картинки -->
